--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.7.0",
+    "@next/env": "^14.2.15",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -24,6 +26,7 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.446.0",
     "next": "^14.2.4",
+    "next-auth": "5.0.0-beta.22",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
