--- a/package.json
+++ b/package.json
@@ -18,20 +18,29 @@
     "@next/env": "^14.2.15",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "^8.3.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.446.0",
     "next": "^14.2.4",
     "next-auth": "5.0.0-beta.22",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.13.0",
     "remark-gfm": "^4.0.0",
+    "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
