--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-markdown": "^9.0.1",
     "recharts": "^2.13.0",
     "remark-gfm": "^4.0.0",
+    "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
