--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.10",
     "geist": "^1.3.0",
     "lucide-react": "^0.446.0",
     "next": "^14.2.4",
